# rustray

./: Cargo.toml
src/: aabb.rs  aabox.rs  aarect.rs  bvh.rs  camera.rs  hitable.rs  hittable.rs  main.rs  material.rs  mesh.rs  pdf.rs  ray.rs  scenes.rs  sphere.rs  texture.rs  triangle.rs  utils.rs  vec.rs  volume.rs
src/scenes/: cornell_box.rs  cornell_box_mesh.rs  cornell_box_scene.rs  cornell_box_texture_filtering.rs  cornell_box_vol.rs  dielectric_scene.rs  earth_scene.rs  env_scene.rs  random_scene.rs  random_scene_bvh.rs  random_scene_light.rs  random_scene_no_bvh.rs  simple_scene.rs
src/scenes/prefabs/: cornell_box.rs
