[package]
name = "rustray"
version = "0.1.0"
authors = ["Andres Lamont <alamont@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "^0.23"
rand = "^0.7"
rayon = "^1.3"
nalgebra = "^0.20"
slice_as_array = "1.1.0"
itertools = "^0.8"
hsl = "^0.1"
minifb = "0.15.3"
cmd_lib = "0.7.8"
# exr = "0.7.3"

# [profile.release]
# lto = true